[package]
name = "ledsV2"
version = "0.1.0"
authors = ["piB"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws_connector = { path = "RustWebsocketClient" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "0.7.3"
rs_ws281x = { path = "rpi-ws281x-rust" }
hsl = "0.1.1"